--- a/config.toml
+++ b/config.toml
@@ -81,3 +81,7 @@ arch = "arm64-v8a"
 [IconPackStudio]
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
+
+[com.facebook.katana]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
