--- a/config.toml
+++ b/config.toml
@@ -82,7 +82,7 @@ arch = "arm64-v8a"
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
-[com.facebook.katana]
+[facebook]
 enabled = true
 app-name = "Facebook"
 version = "auto"
