--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ dpi = "120-640dpi"
 
 [TikTok]
 enabled = true
-# archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 included-patches = "'SIM spoof'"
 
 [Messenger]
@@ -82,8 +82,11 @@ arch = "arm64-v8a"
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
-[facebook]
+[Facebook]
 enabled = true
-app-name = "Facebook"
-version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
+uptodown-dlurl = "https://facebook.en.uptodown.com/android"
+
+[Tasker]
+enabled = true
+uptodown-dlurl = "https://tasker.en.uptodown.com/android"
