--- a/config.toml
+++ b/config.toml
@@ -92,14 +92,14 @@ uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 enabled = true
 uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 
-[Reddit-Extended]
-enabled = false
-patches-source = "inotia00/revanced-patches"
-integrations-source = "inotia00/revanced-integrations"
-cli-source = "inotia00/revanced-cli"
-rv-brand = "ReVanced Extended"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
-uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
+#[Reddit-Extended]
+#enabled = false
+#patches-source = "inotia00/revanced-patches"
+#integrations-source = "inotia00/revanced-integrations"
+#cli-source = "inotia00/revanced-cli"
+#rv-brand = "ReVanced Extended"
+#apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
+#uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
 
 [Reddit]
