--- a/config.toml
+++ b/config.toml
@@ -83,10 +83,10 @@ arch = "arm64-v8a"
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
-[Facebook]
-enabled = true
-apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
-uptodown-dlurl = "https://facebook.en.uptodown.com/android"
+#[Facebook]
+#enabled = true
+#apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
+#uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 
 [Tasker]
 enabled = true
@@ -100,12 +100,6 @@ uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 #rv-brand = "ReVanced Extended"
 #apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 #uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
-# archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
-
-[Reddit]
-version = "auto"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
-uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
 
 [Spotify]
