--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 
 [Music]
 build-mode = "both"
-arch = "arm64-v8a"
+arch = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
@@ -102,8 +102,8 @@ uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 #uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
 
-[Spotify]
-enabled = false
-build-mode = "apk"
-version = "auto"
-uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+#[Spotify]
+#enabled = false
+#build-mode = "apk"
+#version = "auto"
+#uptodown-dlurl = "https://spotify.en.uptodown.com/android"
