--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ parallel-jobs = 1
 # you can use rvmm-config-gen to generate a config
 
 [YouTube]
+enabled = false
 build-mode = "both"
 excluded-patches = ""
 included-patches = "'Custom branding' 'Change header'"
@@ -16,6 +17,7 @@ uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
 
 [Music]
+enabled = false
 build-mode = "both"
 arch = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
@@ -89,7 +91,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-s
 #uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 
 [Tasker]
-enabled = true
+enabled = false
 uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 
 #[Reddit-Extended]
