--- a/config.toml
+++ b/config.toml
@@ -40,8 +40,8 @@ uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
 [Music-Extended]
 enabled = true
 app-name = "Music"
-patches-source = "anddea/revanced-patches"
-#patches-source = "inotia00/revanced-patches"
+#patches-source = "anddea/revanced-patches"
+patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 build-mode = "apk"
