--- a/config.toml
+++ b/config.toml
@@ -31,9 +31,10 @@ version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/photos/"
 uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
 
-#[Spotify]
-#enabled = false
-#uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+[Spotify]
+enabled = true
+uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+version = "auto"
 #version = "9.0.36.683"
 
 # dont build on gh actions (https://github.com/j-hc/revanced-magisk-module/issues/554)
@@ -95,7 +96,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-s
 #uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 
 [Tasker]
-enabled = false
+enabled = true
 uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 
 #[Reddit-Extended]
