--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
 
 [Spotify]
 enabled = true
-uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+uptodown-dlurl = "https://apkmirror.com/apk/"
 version = "auto"
 #version = "9.0.36.683"
 
