--- a/config.toml
+++ b/config.toml
@@ -115,7 +115,9 @@ uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 #version = "auto"
 #uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 
+
 [Reddit]
 apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit/"
 patches-source = "inotia00/revanced-patches"
-cli-source = "inotia00/revanced-cli"
+integrations-source = "inotia00/revanced-integrations"
+rv-brand = "inotia00 ReVanced"
