--- a/config.toml
+++ b/config.toml
@@ -121,3 +121,4 @@ apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit/"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
 rv-brand = "inotia00 ReVanced"
+arch = "arm64-v8a"
