--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
 
 
 [Twitch]
-enabled = true
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 uptodown-dlurl = "https://twitch.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
@@ -87,7 +87,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
 arch = "arm64-v8a"
 
 [IconPackStudio]
-enabled = true
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
 #[Facebook]
@@ -96,7 +96,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-s
 #uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 
 [Tasker]
-enabled = true
+enabled = false
 uptodown-dlurl = "https://tasker.en.uptodown.com/android"
 
 #[Reddit-Extended]
