--- a/config.toml
+++ b/config.toml
@@ -71,7 +71,7 @@ uptodown-dlurl = "https://twitch.en.uptodown.com/android"
 
 [Twitter]
 enabled = true
-# apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
 build-mode = "apk"
 dpi = "120-640dpi"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
